--- a/test-runner/CMakeLists.txt
+++ b/test-runner/CMakeLists.txt
@@ -1,7 +1,12 @@
-project(test-run)
+project(openvibe-test)
 
 add_custom_target(${PROJECT_NAME}-cmake
-	COMMAND cmake "${CMAKE_SOURCE_DIR}/test" "-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}" "-DOV_ROOT_DIR=${CMAKE_INSTALL_PREFIX}" "-GNinja"
+	COMMAND cmake "${CMAKE_SOURCE_DIR}/test"
+		"-DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}"
+		"-DOV_ROOT_DIR=${CMAKE_INSTALL_PREFIX}"
+		"-GNinja"
+		"-DOVT_LOG_DIR=${OVT_LOG_DIR}"
+		"-DOVT_TEST_DATA_DIR=${OVT_TEST_DATA_DIR}"
 	WORKING_DIRECTORY "${CMAKE_BINARY_DIR}/test"
 	COMMENT "Configuring the test project"
 	)
