--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -71,6 +71,7 @@ Kernel_AllowUnregisteredNumericalStimulationIdentifiers = false
 Kernel_ExtendedStimulationLabels = true
 
 Kernel_AbortPlayerWhenBoxNeedsUpdate = false
+Kernel_AbortScenarioImportWhenBoxNeedsUpdate = true
 
 #####################################################################################
 # OpenViBE plugin configuration
