--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -71,7 +71,8 @@ Kernel_AllowUnregisteredNumericalStimulationIdentifiers = false
 Kernel_ExtendedStimulationLabels = true
 
 Kernel_AbortPlayerWhenBoxNeedsUpdate = false
-Kernel_AbortScenarioImportWhenBoxNeedsUpdate = true
+Kernel_AbortScenarioImportWhenBoxNeedsUpdate = false
+Kernel_AbortScenarioImportOnUnknownSetting = false
 
 #####################################################################################
 # OpenViBE plugin configuration
