[Plugin] Migrate xsd schema validation from toolkit to plugin io
Move xml specific validation towards dedicated algorithm as toolkit is used
as an entry point for other scenario formats

Tracker Reference: [Jire CORE-126](https://jira.mensiatech.com/browse/CORE-126)

--- a/plugins/processing/file-io/CMakeLists.txt
+++ b/plugins/processing/file-io/CMakeLists.txt
@@ -22,6 +22,7 @@ INCLUDE("FindOpenViBEModuleXML")
 INCLUDE("FindOpenViBEModuleFS")
 INCLUDE("FindThirdPartyBoost")
 INCLUDE("FindThirdPartyBoost_Regex")
+INCLUDE("FindThirdPartyXerces")
 
 # ---------------------------------
 # Target macros
