[Kernel] Load plugin specific configuration files
Tracker Reference: [CORE-353](https://jira.mensiatech.com/browse/CORE-353)

--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -93,3 +93,8 @@ CustomConfigurationPrefixMacOS = ${Path_UserData}/openvibe
 CustomConfigurationSuffixWindows = .conf
 CustomConfigurationSuffixLinux = rc
 CustomConfigurationSuffixMacOS = rc
+
+CustomConfigurationPluginsWildcard = ${Path_Data}/plugins/*.conf
+Include = ${CustomConfigurationPluginsWildcard}
+
+
