[Module] System: Fix for Linux build
Tracker Reference: [Jira CORE-412](https://jira.mensiatech.com/browse/CORE-412)

--- a/modules/system/CMakeLists.txt
+++ b/modules/system/CMakeLists.txt
@@ -79,6 +79,8 @@ IF(WIN32)
 	ELSE(LIB_STANDARD_MODULE_DBGHELP)
 		MESSAGE(STATUS "  FAILED to find dbghelp...")
 	ENDIF(LIB_STANDARD_MODULE_DBGHELP)
+ELSE(WIN32)
+    TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CMAKE_DL_LIBS})
 ENDIF(WIN32)
 
 # ---------------------------------
