[Build] Zip packing functionality
Add CPack on all needed CMakeLists and modify install dirs

Tracker Reference: [Jira CORE-505](https://jira.mensiatech.com/browse/CORE-505)

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -24,4 +24,6 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 
-INSTALL(DIRECTORY include/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
+INSTALL(DIRECTORY include/   DESTINATION ${OV_TRUE_INCLUDEDIR} FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
+
+INCLUDE(CPack)
