--- a/applications/developer-tools/id-generator/CMakeLists.txt
+++ b/applications/developer-tools/id-generator/CMakeLists.txt
@@ -25,8 +25,11 @@ OV_INSTALL_LAUNCH_SCRIPT(SCRIPT_PREFIX "openvibe-id-generator" EXECUTABLE_NAME "
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
+	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
+	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
 
+# INSTALL(TARGETS 
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
+
+INCLUDE(CPack)
