--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -37,13 +37,15 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
+	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
+	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
 
 INSTALL(TARGETS ${PROJECT_NAME}-static
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
+	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
+	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
 
-INSTALL(DIRECTORY include/ DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h")
+INSTALL(DIRECTORY include/ DESTINATION ${OV_TRUE_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
+
+INCLUDE(CPack)
