--- a/plugins/processing/file-io/CMakeLists.txt
+++ b/plugins/processing/file-io/CMakeLists.txt
@@ -38,10 +38,12 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${CMAKE_INSTALL_FULL_BINDIR}
-	LIBRARY DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR}
-	ARCHIVE DESTINATION ${CMAKE_INSTALL_FULL_LIBDIR})
+	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
+	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
+	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
 
-INSTALL(DIRECTORY box-tutorials  DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
-INSTALL(DIRECTORY electrode_sets DESTINATION ${CMAKE_INSTALL_FULL_DATADIR}/openvibe/             PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY box-tutorials  DESTINATION ${OV_TRUE_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY electrode_sets DESTINATION ${OV_TRUE_DATADIR}/openvibe/             PATTERN ".svn" EXCLUDE)
+
+INCLUDE(CPack)
 
