[Build] ZIP packing functionality
Update CMakeLists with better cpack variable values
Update linux and windows build scripts

Tracker Reference: [Jira CORE-505](https://jira.mensiatech.com/browse/CORE-505)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -59,6 +59,10 @@ IF(NOT CMAKE_INSTALL_PREFIX)
 	SET(CMAKE_INSTALL_PREFIX "${CMAKE_SOURCE_DIR}/../certivibe-build/dist-${CMAKE_BUILD_TYPE}")
 ENDIF(NOT CMAKE_INSTALL_PREFIX)
 
+IF(OV_PACKAGE)
+  SET(CMAKE_INSTALL_PREFIX .)
+ENDIF()
+
 SET(DOCUMENTATION_TEMP_DIRECTORY "${CMAKE_INSTALL_PREFIX}/doc-tmp")
 
 
@@ -155,13 +159,14 @@ ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_FULL_DATADIR}/openvibe")
 OV_SET_PROJECT_VERSION()
 
 IF(OV_PACKAGE)
-	SET(OV_TRUE_INSTALL_PREFIX .)
+        SET(CMAKE_INSTALL_PREFIX .)
+	SET(OV_TRUE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 	SET(OV_TRUE_BINDIR ${CMAKE_INSTALL_BINDIR})
 	SET(OV_TRUE_LIBDIR ${CMAKE_INSTALL_LIBDIR})
 	SET(OV_TRUE_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
 	SET(OV_TRUE_DATADIR ${CMAKE_INSTALL_DATADIR})
 ELSE()
-	SET(OV_TRUE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
+        SET(OV_TRUE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
 	SET(OV_TRUE_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
 	SET(OV_TRUE_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR})
 	SET(OV_TRUE_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR})
@@ -217,11 +222,13 @@ FILE(GLOB_RECURSE script_files scripts/*.cmd scripts/*.sh scripts/*.nsi)
 ADD_CUSTOM_TARGET(openvibe-scripts SOURCES ${script_files})
 
 SET(CPACK_GENERATOR "ZIP")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "My funky project")
-SET(CPACK_PACKAGE_VENDOR "Me, myself, and I")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CertiViBE")
+SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
 SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
 SET(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 SET(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
 INCLUDE(CPack)
+MESSAGE(STATUS ${CMAKE_SOURCE_DIR})
+MESSAGE(STATUS ${CMAKE_BINARY_DIR})
