[Build] ZIP packing functionality - PR commments
Rename OV_TRUE_* to DIST_*
Remove spaces
Package name include build type
OV_PACKAGE will be set to FALSE if not defined

Tracker Reference: [Jira CORE-505](https://jira.mensiatech.com/browse/CORE-505)

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -24,6 +24,6 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 
-INSTALL(DIRECTORY include/   DESTINATION ${OV_TRUE_INCLUDEDIR} FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
+INSTALL(DIRECTORY include/   DESTINATION ${DIST_INCLUDEDIR} FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
 
 INCLUDE(CPack)
