--- a/plugins/processing/file-io/CMakeLists.txt
+++ b/plugins/processing/file-io/CMakeLists.txt
@@ -38,12 +38,10 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY box-tutorials  DESTINATION ${OV_TRUE_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
-INSTALL(DIRECTORY electrode_sets DESTINATION ${OV_TRUE_DATADIR}/openvibe/             PATTERN ".svn" EXCLUDE)
-
-INCLUDE(CPack)
+INSTALL(DIRECTORY box-tutorials  DESTINATION ${DIST_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY electrode_sets DESTINATION ${DIST_DATADIR}/openvibe/             PATTERN ".svn" EXCLUDE)
 
