--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,14 @@ IF(NOT(APPLE))
 	ENDIF(OPENMP_FOUND)
 ENDIF()
 
-
 ADD_DEFINITIONS("-DOV_PROJECT_NAME=\"${PROJECT_NAME}\"")
 ADD_DEFINITIONS("-DOV_VERSION_MAJOR=\"${OV_GLOBAL_VERSION_MAJOR}\"")
 ADD_DEFINITIONS("-DOV_VERSION_MINOR=\"${OV_GLOBAL_VERSION_MINOR}\"")
 ADD_DEFINITIONS("-DOV_VERSION_PATCH=\"${OV_GLOBAL_VERSION_PATCH}\"")
 
+IF(NOT DEFINED OV_PACKAGE)
+	SET(OV_PACKAGE FALSE)
+ENDIF(NOT DEFINED OV_PACKAGE)
 
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
@@ -158,19 +160,17 @@ ADD_DEFINITIONS(-DOV_CMAKE_PATH_DATA="${CMAKE_INSTALL_FULL_DATADIR}/openvibe")
 # Sets the PROJECT_VERSION variable to something, depending on overriding OvSetProjectVersion.cmake files
 OV_SET_PROJECT_VERSION()
 
+SET(DIST_ROOT ${CMAKE_INSTALL_PREFIX})
 IF(OV_PACKAGE)
-        SET(CMAKE_INSTALL_PREFIX .)
-	SET(OV_TRUE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-	SET(OV_TRUE_BINDIR ${CMAKE_INSTALL_BINDIR})
-	SET(OV_TRUE_LIBDIR ${CMAKE_INSTALL_LIBDIR})
-	SET(OV_TRUE_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
-	SET(OV_TRUE_DATADIR ${CMAKE_INSTALL_DATADIR})
+	SET(DIST_BINDIR ${CMAKE_INSTALL_BINDIR})
+	SET(DIST_LIBDIR ${CMAKE_INSTALL_LIBDIR})
+	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
+	SET(DIST_DATADIR ${CMAKE_INSTALL_DATADIR})
 ELSE()
-        SET(OV_TRUE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-	SET(OV_TRUE_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
-	SET(OV_TRUE_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR})
-	SET(OV_TRUE_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR})
-	SET(OV_TRUE_DATADIR ${CMAKE_INSTALL_FULL_DATADIR})
+	SET(DIST_BINDIR ${CMAKE_INSTALL_FULL_BINDIR})
+	SET(DIST_LIBDIR ${CMAKE_INSTALL_FULL_LIBDIR})
+	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_FULL_INCLUDEDIR})
+	SET(DIST_DATADIR ${CMAKE_INSTALL_FULL_DATADIR})
 ENDIF()
 
 # Traverse these directories and build their components
@@ -214,21 +214,22 @@ ENDIF()
 # make a copy of the dependency script, this is done so we can use the same launch scripts both in win install and win devel situations.
 IF(WIN32)
 	SET(ABSOLUTE_PATH_DEPENDENCIES ${OV_CUSTOM_DEPENDENCIES_PATH})
-	CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/scripts/windows-set-environment.cmd-base "${OV_TRUE_BINDIR}/openvibe-set-env.cmd")
+	CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/scripts/windows-set-environment.cmd-base "${DIST_BINDIR}/openvibe-set-env.cmd")
 ENDIF(WIN32)
 
 # add the scripts to the project so IDEs using the CMake file are aware of them
 FILE(GLOB_RECURSE script_files scripts/*.cmd scripts/*.sh scripts/*.nsi)
 ADD_CUSTOM_TARGET(openvibe-scripts SOURCES ${script_files})
 
-SET(CPACK_GENERATOR "ZIP")
-SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CertiViBE")
-SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
-SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
-SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
-SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
-SET(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
-SET(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
-INCLUDE(CPack)
-MESSAGE(STATUS ${CMAKE_SOURCE_DIR})
-MESSAGE(STATUS ${CMAKE_BINARY_DIR})
+IF(OV_PACKAGE)
+	SET(CPACK_GENERATOR "ZIP")
+	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CertiViBE")
+	SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
+	SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
+	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
+	SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
+	SET(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
+	SET(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
+	SET(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_BUILD_TYPE}")
+	INCLUDE(CPack)
+ENDIF()
