--- a/kernel/CMakeLists.txt
+++ b/kernel/CMakeLists.txt
@@ -67,11 +67,11 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY share/ DESTINATION ${OV_TRUE_DATADIR}/openvibe/kernel   PATTERN ".svn" EXCLUDE PATTERN "*-base" EXCLUDE)
+INSTALL(DIRECTORY share/ DESTINATION ${DIST_DATADIR}/openvibe/kernel   PATTERN ".svn" EXCLUDE PATTERN "*-base" EXCLUDE)
 
 #INSTALL(DIRECTORY src/   DESTINATION ${CMAKE_INSTALL_FULL_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE PATTERN "doc" EXCLUDE)
 
