--- a/modules/csv/CMakeLists.txt
+++ b/modules/csv/CMakeLists.txt
@@ -37,15 +37,15 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
 INSTALL(TARGETS ${PROJECT_NAME}-static
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY include/ DESTINATION ${OV_TRUE_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
+INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} COMPONENT headers FILES_MATCHING PATTERN "*.h")
 
 INCLUDE(CPack)
