--- a/modules/socket/CMakeLists.txt
+++ b/modules/socket/CMakeLists.txt
@@ -61,10 +61,10 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY include/ DESTINATION ${OV_TRUE_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY include/ DESTINATION ${DIST_INCLUDEDIR} FILES_MATCHING PATTERN "*.h" PATTERN ".svn" EXCLUDE)
 
 INCLUDE(CPack)
