--- a/plugins/processing/data-generation/CMakeLists.txt
+++ b/plugins/processing/data-generation/CMakeLists.txt
@@ -32,8 +32,8 @@ SET_BUILD_PLATFORM()
 # Install files
 # -----------------------------
 INSTALL(TARGETS ${PROJECT_NAME}
-	RUNTIME DESTINATION ${OV_TRUE_BINDIR}
-	LIBRARY DESTINATION ${OV_TRUE_LIBDIR}
-	ARCHIVE DESTINATION ${OV_TRUE_LIBDIR})
+	RUNTIME DESTINATION ${DIST_BINDIR}
+	LIBRARY DESTINATION ${DIST_LIBDIR}
+	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
 INCLUDE(CPack)
