[Plugin] Fetch plugins from different places
Add support for ';' in config file for plugin loading
Rename all plugins to 'certivibe-plugin-XXX'

Tracker Reference: [Jira CORE-543](https://jira.mensiatech.com/browse/CORE-543)

--- a/kernel/share/openvibe.conf
+++ b/kernel/share/openvibe.conf
@@ -51,9 +51,9 @@ VRPN_ExternalServerPort = 53883
 # OpenViBE kernel configuration
 #####################################################################################
 
-Kernel_PluginsPatternMacOS = ${Path_Lib}/libopenvibe-plugins-*.dylib
-Kernel_PluginsPatternLinux = ${Path_Lib}/libopenvibe-plugins-*.so
-Kernel_PluginsPatternWindows = ${Path_Bin}/openvibe-plugins-*.dll
+Kernel_PluginsPatternMacOS = ${Path_Lib}/libopenvibe-plugins-*.dylib;${Path_Bin}/libcertivibe-plugins-*.dylib
+Kernel_PluginsPatternLinux = ${Path_Lib}/libopenvibe-plugins-*.so;${Path_Bin}/libcertivibe-plugins-*.so
+Kernel_PluginsPatternWindows = ${Path_Bin}/openvibe-plugins-*.dll;${Path_Bin}/certivibe-plugins-*.dll
 Kernel_Plugins = ${Kernel_PluginsPattern${OperatingSystem}}
 Kernel_MainLogLevel = Trace
 Kernel_ConsoleLogLevel = Information
