[CMake] Script for including CertiViBE as dependency
Add AddCertivibeComponents.cmake script
Update general CMakeLists to add this script to dist

Tracker Reference: [Jira CORE-523](https://jira.mensiatech.com/browse/CORE-523)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -228,7 +228,8 @@ IF(WIN32)
 ENDIF(WIN32)
 
 # add the scripts to the project so IDEs using the CMake file are aware of them
-FILE(GLOB_RECURSE script_files scripts/*.cmd scripts/*.sh scripts/*.nsi)
+FILE(GLOB_RECURSE script_files scripts/*.cmd scripts/*.sh scripts/*.nsi scripts/*.cmake)
+INSTALL(FILES scripts/AddCertivibeComponents.cmake DESTINATION ${DIST_DATADIR})
 ADD_CUSTOM_TARGET(openvibe-scripts SOURCES ${script_files})
 
 
