[Test] Move unit and validation test into main repository
Remove unwanted robot files
Separate CMakeListTests into 2 in unit-test and validation-test directories
Remove s from modules names (openvibe-modules-* to openvibe-module-*)
Edited ctest launch scripts

Tracker Reference: [Jira CORE-576](https://jira.mensiatech.com/browse/CORE-576)

--- a/unit-test/openvibe-module-fs/CMakeLists.txt
+++ b/unit-test/openvibe-module-fs/CMakeLists.txt
@@ -19,7 +19,7 @@
 # If not, see <http://www.gnu.org/licenses/>.
 #######################################################################
 
-PROJECT(openvibe-modules-fs-test)
+PROJECT(openvibe-module-fs-test)
 
 # ---------------------------------
 # Target macros
