[Test] Move unit and validation test into main repository
Remove test-runner
Edit typo
Remove valgrind from validation

Tracker Reference: [Jira CORE-576](https://jira.mensiatech.com/browse/CORE-576)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -132,7 +132,7 @@ SET_PROPERTY(GLOBAL PROPERTY OV_PROP_CURRENT_PROJECTS_BUILD_DIR "")
 # Used by the various Find* scripts to locate OpenViBE modules
 SET(OV_BASE_DIR ${CMAKE_SOURCE_DIR})
 SET(OV_BASE_BIN_DIR ${CMAKE_BINARY_DIR})
-SET(OV_LIBRARY_DIR  ${CMAKE_BINARY_DIR}/lib
+SET(OV_LIBRARY_DIR  ${CMAKE_BINARY_DIR}/lib)
 # needed for making visual studio projects when this script is called without CMAKE_BUILD_TYPE
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_DEBUG "TARGET_BUILDTYPE_Debug")
 SET_PROPERTY(DIRECTORY APPEND PROPERTY COMPILE_DEFINITIONS_RELEASE "TARGET_BUILDTYPE_Release")
