[Test] Move unit and validation test into main repository
Add cmake-modules/OvtRunMultipleCommand.cmake file

Tracker Reference: [Jira CORE-576](https://jira.mensiatech.com/browse/CORE-576)

--- a/unit-test/CMakeLists.txt
+++ b/unit-test/CMakeLists.txt
@@ -27,7 +27,7 @@ SET(OVT_TOOLS_FOLDER tools)
 # ---------------------
 
 # Add some search directory to module path
-SET(OVT_CMAKE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/cmake-modules)
+SET(OVT_CMAKE_DIR ${OV_BASE_DIR}/cmake-modules)
 SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${OVT_CMAKE_DIR})
 
 # Modify library prefixes and suffixes to comply to Windows or Linux naming
