[Test] Move unit and validation test into main repository
Edit correct path to executable

Tracker Reference: [Jira CORE-576](https://jira.mensiatech.com/browse/CORE-576)

--- a/validation-test/CMakeLists.txt
+++ b/validation-test/CMakeLists.txt
@@ -97,7 +97,7 @@ CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/data/openvibe/openvibe.conf.in ${CMAK
 
 # Utility variable for subproject
 SET(OVT_OPENVIBE_DATA ${CMAKE_CURRENT_BINARY_DIR}/data/openvibe)
-SET(OVT_OPENVIBE_PLAYER ${OV_BINARY_DIR}/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
+SET(OVT_OPENVIBE_PLAYER ${DIST_BINDIR}/openvibe-scenario-player${CMAKE_EXECUTABLE_SUFFIX})
 
 IF(UNIX)
 	SET(OVT_OPENVIBE_PLAYER_LOG_FILE "$ENV{HOME}/.config/OpenVIBE/log/openvibe-scenario-player.log")
