[Test] Move unit and validation test into main repository
Add missing files

Tracker Reference: [Jira CORE-576](https://jira.mensiatech.com/browse/CORE-576)

--- a/validation-test/CMakeLists.txt
+++ b/validation-test/CMakeLists.txt
@@ -107,6 +107,7 @@ ENDIF()
 
 FILE(TO_CMAKE_PATH ${OVT_OPENVIBE_PLAYER_LOG_FILE} OVT_OPENVIBE_PLAYER_LOG_FILE)
 
+SET(OVT_VALIDATION_TOOLKIT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/python-toolkit)
 # ----------------------
 # CMake tree processing
 # ----------------------
