[CMake] Do not include the "top-level" directory in CPack - This is because the standard NSIS installation routines we use expect the archive to have files directly inside

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,6 +170,7 @@ IF(OV_PACKAGE)
 	SET(DIST_INCLUDEDIR ${CMAKE_INSTALL_INCLUDEDIR})
 	SET(DIST_DATADIR ${CMAKE_INSTALL_DATADIR})
 	SET(CPACK_GENERATOR "ZIP")
+	SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "CertiViBE")
 	SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
 	SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
