[Scenario Player] Standalone player can now load metaboxes
[CORE-190](https://jira.mensiatech.com/browse/CORE-190)

--- a/applications/developer-tools/scenario-player/CMakeLists.txt
+++ b/applications/developer-tools/scenario-player/CMakeLists.txt
@@ -45,6 +45,7 @@ INCLUDE("FindOpenViBE")
 INCLUDE("FindOpenViBECommon")
 INCLUDE("FindOpenViBEToolkit")
 INCLUDE("FindOpenViBEModuleSystem")
+INCLUDE("FindOpenViBEModuleFS")
 INCLUDE("FindThirdPartyBoost")
 
 # ---------------------------------
