[Plugin] File-IO: Copy ov signal to shared scenarios examples

--- a/plugins/processing/file-io/CMakeLists.txt
+++ b/plugins/processing/file-io/CMakeLists.txt
@@ -46,6 +46,7 @@ INSTALL(TARGETS ${PROJECT_NAME}
 	LIBRARY DESTINATION ${DIST_LIBDIR}
 	ARCHIVE DESTINATION ${DIST_LIBDIR})
 
-INSTALL(DIRECTORY box-tutorials  DESTINATION ${DIST_DATADIR}/openvibe/scenarios/   PATTERN ".svn" EXCLUDE)
-INSTALL(DIRECTORY electrode_sets DESTINATION ${DIST_DATADIR}/openvibe/             PATTERN ".svn" EXCLUDE)
+INSTALL(DIRECTORY box-tutorials  DESTINATION ${DIST_DATADIR}/openvibe/scenarios/)
+INSTALL(DIRECTORY signal DESTINATION ${DIST_DATADIR}/openvibe/scenarios/)
+INSTALL(DIRECTORY electrode_sets DESTINATION ${DIST_DATADIR}/openvibe/)
 
