[CMake] Fix AddCertivibeComponent script when linking static libraries
Script now properly links to .a files when a static link to openvibe-sdk is requested.
Also name the linux package with regards to the linux distribution.

Tracker Reference: [CORE-715](https://jira.mensiatech.com/browse/CORE-715)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -179,6 +179,13 @@ IF(OV_PACKAGE)
 	SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
 	SET(CPACK_PACKAGE_VERSION_MINOR ${OV_GLOBAL_VERSION_MINOR})
 	SET(CPACK_PACKAGE_VERSION_PATCH ${OV_GLOBAL_VERSION_PATCH})
+
+	if(UNIX)
+		execute_process(
+			COMMAND bash -c "echo -n $(lsb_release -i -s)$(lsb_release -r -s)"
+			OUTPUT_VARIABLE CPACK_SYSTEM_NAME)
+	endif()
+
 	SET(CPACK_PACKAGE_NAME "${CMAKE_PROJECT_NAME}-${CMAKE_BUILD_TYPE}")
 	INCLUDE(CPack)
 ELSE()
