[Validation Test] Deactivate OneVsOne HT and Voting classifier tests
Tracker Reference: [CORE-854](https://jira.mensiatech.com/browse/CORE-854)

--- a/validation-test/openvibe-classification-lda/CMakeLists.txt
+++ b/validation-test/openvibe-classification-lda/CMakeLists.txt
@@ -38,9 +38,9 @@ SET(TEST_MODULE Classification-LDA)
 SET(TEST_SCENARIOS 
 Native
 Onevsall
-Onevsone-HT
+#Onevsone-HT
 Onevsone-PKPD
-Onevsone-Voting
+#Onevsone-Voting
 )
 
 # Templates xml.in files
