[Scripts] Fix project's name bis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_policy(SET CMP0043 OLD)
 cmake_policy(SET CMP0045 OLD)
 cmake_policy(SET CMP0048 OLD)
 
-PROJECT(OpenViBE)
+PROJECT(OpenVIBE)
 
 SET(OV_GLOBAL_VERSION_MAJOR 0)
 SET(OV_GLOBAL_VERSION_MINOR 0)
