[Kernel] Add the possibility to hide error locations for releases
- By default enable this option when creating packages

[CORE-841](https://jira.mensiatech.com/browse/CORE-841)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies")
 SET(OV_SOURCE_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies-source")
 
 SET(BRAND_NAME "OpenViBE" CACHE STRING "Brand with which titles and documentation will be prefixed")
+OPTION(OV_DISPLAY_ERROR_LOCATION ON)
 OPTION(PUBLISH_DOC_ASSETS "Publish plugin documentation assets" ON)
 
 # If OpenMP is available, it will allow Eigen to use multiple cores in matrix math.
@@ -119,6 +120,10 @@ ENDIF()
 #################################################################
 string(TOLOWER ${BRAND_NAME} LOWER_BRAND_NAME)
 ADD_DEFINITIONS(-DBRAND_NAME="${BRAND_NAME}")
+
+IF(OV_DISPLAY_ERROR_LOCATION)
+	ADD_DEFINITIONS(-DOV_DISPLAY_ERROR_LOCATION)
+ENDIF()
 #################################################################
 
 SET(OV_LAUNCHER_SOURCE_PATH "${CMAKE_SOURCE_DIR}/cmake-modules/launchers")
