[Refactor] Removal of metabox-loader + use the new CMAKE_CXX_STANDARD variable + fixed some warnings
Tracker Reference: [CORE-721](https://jira.mensiatech.com/browse/CORE-721)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ IF(NOT DEFINED OV_PACKAGE)
 	SET(OV_PACKAGE FALSE)
 ENDIF(NOT DEFINED OV_PACKAGE)
 
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 IF(WIN32)
 	ADD_DEFINITIONS("-DNOMINMAX -DBOOST_ALL_NO_LIB")
 	# Switch /arch:SSE2 enables vectorization. Remove if your CPU/compiler doesn't support it.
@@ -50,11 +52,11 @@ IF(WIN32)
 	SET(OV_WIN32_BOOST_VERSION "1_55")
 ELSEIF(APPLE)
 	SET(OV_EIGEN_FLAGS "-msse2")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall ${OV_EIGEN_FLAGS}")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall ${OV_EIGEN_FLAGS}")
 ELSEIF(UNIX)
 	# Switch -msse2 enables vectorization. Remove if your CPU/compiler doesn't support it.
 	SET(OV_EIGEN_FLAGS "-msse2")
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall ${OV_EIGEN_FLAGS}")
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall ${OV_EIGEN_FLAGS}")
 ELSE()
 	MESSAGE(WARNING "Warning: unknown platform")
 ENDIF()
