[Refactor] More licences updates
Tracker Reference: [CORE-727](https://jira.mensiatech.com/browse/CORE-727)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -178,8 +178,7 @@ IF(OV_PACKAGE)
 	SET(CPACK_GENERATOR "ZIP")
 	SET(CPACK_INCLUDE_TOPLEVEL_DIRECTORY OFF)
 	SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${BRAND_NAME})
-	SET(VENDOR "Inria & Mensia Technologies")
-	SET(CPACK_PACKAGE_VENDOR ${VENDOR})
+	SET(CPACK_PACKAGE_VENDOR "Inria & Mensia Technologies")
 	SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 	SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/COPYING.md")
 	SET(CPACK_PACKAGE_VERSION_MAJOR ${OV_GLOBAL_VERSION_MAJOR})
