[Refactor] Deduce COMPANY_NAME from BRAND_NAME
Tracker Reference: [CORE-727](https://jira.mensiatech.com/browse/CORE-727)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,12 @@ SET(OV_CUSTOM_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies" CACHE STRING 
 SET(OV_SOURCE_DEPENDENCIES_PATH "${CMAKE_SOURCE_DIR}/dependencies-source")
 
 SET(BRAND_NAME "OpenViBE" CACHE STRING "Brand with which titles and documentation will be prefixed")
-SET(COMPANY_NAME "Inria" CACHE STRING "Name used inside copyrights")
+IF(BRAND_NAME STREQUAL "NeuroRT")
+	SET(COMPANY_NAME "Mensia Technologies SA")
+ELSE()
+	SET(COMPANY_NAME "Inria")
+ENDIF()
+
 OPTION(OV_DISPLAY_ERROR_LOCATION ON)
 OPTION(PUBLISH_DOC_ASSETS "Publish plugin documentation assets" ON)
 
